# cleaner_name

./: .gitignore  README.md  pyproject.toml
src/: cleaner.py  db_loader.py  main.py
tests/: test_cleaner.py
