[project]
name = "russian-name-cleaner"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimri Bott",email = "VladimirBott@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]
